k8s/istio/staging-demo/peer-authentication-staging-permissive-ROLLBACK.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default-strict-mtls
  namespace: staging
spec:
  mtls:
    mode: PERMISSIVE
